add project features